<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:padding="20dp"

    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/disease_update"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_disease"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:height="50dp"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/disease_name_add"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/disease_name"/>

    <Spinner
        android:id="@+id/major2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/major"
        android:padding="10dp"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/disease_desc_add"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/description"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/submitbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/submit"
        android:layout_gravity="end"
/>
</LinearLayout>