<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".uis.MainActivity">
    <ImageView
        android:id="@+id/image_Logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/dp"
        android:contentDescription="@string/log_out"/>    <!--Logo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcomes"
        android:textColor="@color/primary_900"
        android:textSize="40sp"
        android:textStyle="bold" /> <!--Welcome-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/primary_900"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_900"
            app:passwordToggleEnabled="false"
            app:startIconDrawable="@drawable/baseline_person_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/primary_900"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_900"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/baseline_lock_24"
            tools:ignore="HardcodedText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnFogot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#00000000"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/primary_900"
            tools:ignore="TouchTargetSizeCheck" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary_900"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/newuser"
            android:textAllCaps="false"
            android:textColor="@color/primary_900" />
    </LinearLayout>
</LinearLayout>