<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symptom"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/primary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:gravity="center">
        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/doctor_table"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_green"
                    android:src="@drawable/stethoscope"
                    android:padding="15dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_2"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_doctor"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/disease_table"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_red"
                    android:src="@drawable/disease"
                    android:padding="15dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_2"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_list"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/logoutx"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_yellow"
                    android:src="@drawable/baseline_logout_24"
                    android:padding="15dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_2"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>