<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uis.ForPatient.Fragments.PatientUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5"
        android:elevation="0dp">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="My proffile"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,RtlSymmetry" />

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/avatar"
            app:civ_border_color="#FF000000"
            app:civ_border_width="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawablePadding="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:gravity="start|center"
            android:backgroundTint="@color/white"
            android:background="@drawable/frag_button_background"
            android:drawableStart="@drawable/baseline_logout_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/frag_button_background"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/outline_info_24"
            android:drawablePadding="20dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:text="@string/update_info"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnPassword"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/frag_button_background"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/outline_lock_24"
            android:drawablePadding="20dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textSize="18sp"

            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txtUserFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_fullname"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>