<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uis.ForPatient.BookingDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/available_date"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rSpe" />

        <Spinner
            android:id="@+id/timeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:background="#00ffffff"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingEnd="50dp"
                android:text="Booking detail"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,RtlSymmetry" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgInRecycler"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/round_background_white"
                android:scaleType="fitCenter"
                android:src="@drawable/feature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/circular1"
                app:shapeAppearanceOverlay="@style/circular1" />

            <TextView
                android:id="@+id/txtDrNameInRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-5dp"
                android:text="Dr. Nguyen Hong Sac"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgInRecycler"
                app:layout_constraintTop_toTopOf="@+id/imgInRecycler"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txtDoctorDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Doctor"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/imgInRecycler"
                app:layout_constraintTop_toBottomOf="@+id/txtDrNameInRecycler"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txtDoctorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="Email: doctor@dphospital.com"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/txtDoctorPhone"
                app:layout_constraintStart_toEndOf="@+id/imgInRecycler"
                app:layout_constraintTop_toBottomOf="@+id/txtDoctorDescription"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txtDoctorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="4dp"
                android:text="Phone: 0999999999"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/ratingBar"
                app:layout_constraintStart_toEndOf="@+id/imgInRecycler"
                tools:ignore="HardcodedText" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:progressTint="@android:color/holo_orange_light"
                android:rating="5"
                app:layout_constraintBottom_toBottomOf="@+id/imgInRecycler"
                app:layout_constraintStart_toEndOf="@+id/imgInRecycler" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:backgroundTint="@android:color/transparent"
                android:padding="-10dp"
                android:src="@drawable/sharp_favorite_24"
                android:tint="@color/accent_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnBookApointment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/frag_button_background"
            android:backgroundTint="@color/primary_900"
            android:gravity="center"
            android:padding="15dp"
            android:text="Book appointment"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/grey_2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txtHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/specialities"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rSpe"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHello" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="Dan Phuong hospital - Dan Phuong district"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>